# burn-streaming

./: Makefile  README.md  docker-compose.yml  test-vod-mse.js  test-vod.js
api/: Cargo.toml  Dockerfile
api/src/: main.rs
whisper-service/: Dockerfile  app.py
